Moved classes to deidcated packages for business needs
